--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>mtime</title>
+    <link rel="stylesheet" type="text/css" href="/static/iconfont/iconfont.css">
+    <style type="text/css" media="screen">
+    body,h1,h2,h3,h4,h5,h6,p,a,img,input,li,ul,ol,dl,dt,dd{padding:0; margin:0}
+	ul{ list-style:none;}
+	input{outline:none}
+	img{ display:block; border:0}
+	body{font-size:14px;font-family:"微软雅黑";color:#909090; background:#f3f3f3}
+	a{text-decoration:none;}
+	
+	 box-sizing: border-box;
+	
+    </style>
   </head>
   <body>
     <div id="app"></div>
