--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	input{outline:none}
 	img{ display:block; border:0}
 	body{font-size:14px;font-family:"微软雅黑";color:#909090; background:#f3f3f3}
-	a{text-decoration:none;}
+	a{text-decoration:none;color: #000;}
 	
 	 box-sizing: border-box;
 	
