--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./static/iconfont/iconfont.css">
     <title>mtime</title>
-  </head>
-  <body>
+    <style>
+        html {
+            position: relative;
+            height: 100%;
+            font-size: 26.666667vw;
+        }
+        
+        body {
+            position: relative;
+            height: 100%;
+            font-size: 14px;
+        }
+        
+        * {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+</head>
+
+<body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
